gccida/c0/push_init_level
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5746:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5754:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5796:11: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
p->next = constructor_stack_0; 
          ^~~~~~~~~~~~~~~~~~~
          constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5798:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = p; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5801:21: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
constructor_depth = spelling_0 - spelling_base; 
                    ^~~~~~~~~~
                    spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5808:18: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
p->range_stack = constructor_range_stack_0; 
                 ^~~~~~~~~~~~~~~~~~~~~~~~~
                 constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5809:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/c-typeck.c:5893:32: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
constructor_max_index = ( tree)constructor_type->int_cst.rtl[7]; 
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_init_level/src/obj/c-typeck.o] Error 1
